// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioSet /> should render a radio Button Set 1`] = `
<styled.div
  orientation="vertical"
>
  <styled.div
    key="radio-input-set-0"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        id="radio-input-set-0"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 1"
      />
      <label
        className="radio radio-button"
        htmlFor="radio-input-set-0"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="radio-input-set-1"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        disabled={true}
        id="radio-input-set-1"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 2"
      />
      <label
        className="radio radio-button"
        htmlFor="radio-input-set-1"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="radio-input-set-2"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        id="radio-input-set-2"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 3"
      />
      <label
        className="radio radio-button"
        htmlFor="radio-input-set-2"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="radio-input-set-3"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        id="radio-input-set-3"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 4"
      />
      <label
        className="radio radio-button"
        htmlFor="radio-input-set-3"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;

exports[`<RadioSet /> should render a radio Set 1`] = `
<styled.div
  orientation="vertical"
>
  <styled.div
    key="radio-input-set-0"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        id="radio-input-set-0"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 1"
      />
      <label
        className="radio"
        htmlFor="radio-input-set-0"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="radio-input-set-1"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        disabled={true}
        id="radio-input-set-1"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 2"
      />
      <label
        className="radio"
        htmlFor="radio-input-set-1"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="radio-input-set-2"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        id="radio-input-set-2"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 3"
      />
      <label
        className="radio"
        htmlFor="radio-input-set-2"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="radio-input-set-3"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        id="radio-input-set-3"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 4"
      />
      <label
        className="radio"
        htmlFor="radio-input-set-3"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;

exports[`<RadioSet /> should render a radio Set with a tight spacing 1`] = `
<styled.div
  orientation="vertical"
>
  <styled.div
    key="radio-input-set-0"
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        id="radio-input-set-0"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 1"
      />
      <label
        className="radio"
        htmlFor="radio-input-set-0"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="radio-input-set-1"
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        disabled={true}
        id="radio-input-set-1"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 2"
      />
      <label
        className="radio"
        htmlFor="radio-input-set-1"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="radio-input-set-2"
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        id="radio-input-set-2"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 3"
      />
      <label
        className="radio"
        htmlFor="radio-input-set-2"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="radio-input-set-3"
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        id="radio-input-set-3"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 4"
      />
      <label
        className="radio"
        htmlFor="radio-input-set-3"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;

exports[`<RadioSet /> should render a radio set with horizontal buttons 1`] = `
<styled.div
  orientation="horizontal"
>
  <styled.div
    key="radio-input-set-0"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        id="radio-input-set-0"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 1"
      />
      <label
        className="radio"
        htmlFor="radio-input-set-0"
      >
        123123
      </label>
    </div>
  </styled.div>
  <styled.div
    key="radio-input-set-1"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        disabled={true}
        id="radio-input-set-1"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 2"
      />
      <label
        className="radio"
        htmlFor="radio-input-set-1"
      >
        this is option 2 (I am disabled)
      </label>
    </div>
  </styled.div>
  <styled.div
    key="radio-input-set-2"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        id="radio-input-set-2"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 3"
      />
      <label
        className="radio"
        htmlFor="radio-input-set-2"
      >
        this is option 3
      </label>
    </div>
  </styled.div>
  <styled.div
    key="radio-input-set-3"
    margins={
      Object {
        "bottom": 8,
      }
    }
  >
    <div
      className="radioInput"
    >
      <styled.input
        checked={false}
        className="input "
        data-component-type="radio_input"
        id="radio-input-set-3"
        name="radio-input-set"
        onChange={[Function]}
        type="radio"
        value="option 4"
      />
      <label
        className="radio"
        htmlFor="radio-input-set-3"
      >
        this is option 4
      </label>
    </div>
  </styled.div>
</styled.div>
`;
